--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Logged in as Becca Daniel</h1>
+<h1>This is the dashboard show page!</h1>
 <h1>This account has not yet been activated. Please check your email.</h1>
