--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <% if current_user %>
-      <li ><%= link_to "Logged in as: #{current_user.name}"%></li>
+      <%= "Logged in as: #{current_user.name}"%>
     <% end %>
 
     <%= yield %>
