--- a/app/views/account_verifier_mailer/account_activation.html.erb
+++ b/app/views/account_verifier_mailer/account_activation.html.erb
@@ -5,3 +5,6 @@
 <p>
 Welcome to BattleShift! Click on the link below to activate your account:
 </p>
+
+<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
+                                                    email: @user.email) %>
