--- a/app/views/account_verifier_mailer/account_activation.html.erb
+++ b/app/views/account_verifier_mailer/account_activation.html.erb
@@ -8,3 +8,4 @@ Welcome to BattleShift! Click on the link below to activate your account:
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token,
                                                     email: @user.email) %>
+<p>Here is your unique API key for making API calls: <%= @user.activation_token %></p>
