--- a/app/views/account_verifier_mailer/account_activation.text.erb
+++ b/app/views/account_verifier_mailer/account_activation.text.erb
@@ -3,3 +3,5 @@ Hi <%= @user.name %>,
 Welcome to BattleShift! Click on the link below to activate your account:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
+
+Here is your unique API key for making API calls: <%= @user.activation_token %>
