--- a/app/views/account_verifier_mailer/account_activation.html.erb
+++ b/app/views/account_verifier_mailer/account_activation.html.erb
@@ -6,6 +6,7 @@
 Welcome to BattleShift! Click on the link below to activate your account:
 </p>
 
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
-                                                    email: @user.email) %>
-<p>Here is your unique API key for making API calls: <%= @user.activation_token %></p>
+
+<%= link_to "Activate", "#{ENV['ROOT_URL']}/account_activations/#{@user.id}/edit" %>
+
+<p>Here is your unique API key for making API calls: <%= @user.api_key %></p>
